# Hawks-Job-Hunter

./: LICENSE  README.md  pyproject.toml  scout_as_code.py
docs/: architecture.md  trust_model.md
hawks/: __init__.py
hawks/scout/: __init__.py  contracts.py  dedupe.py  freshness.py  scorer.py  triage.py
scripts/: create_hawks_image.py
site/: architecture.html  index.html  style.css  trust-model.html
tests/: test_scout_contracts.py
